# extracker

./: .gitignore  CMakeLists.txt  README.md  pattern1.xtp
.github/: copilot-instructions.md
docs/: ARCHITECTURE.md  PR_DRAFT_song_order_workflow.md  RELEASE_CHECKLIST.md
include/extracker/: audio_engine.hpp  cli_parse_utils.hpp  command_registry.hpp  core_cli.hpp  default_command_bindings.hpp  midi_cli.hpp  midi_input.hpp  note_cli.hpp  pattern_cli.hpp  pattern_editor.hpp  pattern_templates.hpp  plugin_cli.hpp  plugin_host.hpp  record_cli.hpp  record_workflow.hpp  sequencer.hpp  transport.hpp
src/: audio_engine.cpp  command_registry.cpp  core_cli.cpp  default_command_bindings.cpp  main.cpp  midi_cli.cpp  midi_input.cpp  module.cpp  module_cli.cpp  note_cli.cpp  pattern_cli.cpp  pattern_cli_basic.cpp  pattern_cli_bulk.cpp  pattern_cli_internal.hpp  pattern_cli_shared.cpp  pattern_editor.cpp  pattern_templates.cpp  plugin_cli.cpp  plugin_host.cpp  record_cli.cpp  record_workflow.cpp  sample_cli.cpp  sequencer.cpp  transport.cpp
src/gui/: app.cpp  app.h  main_gui.cpp  main_window.cpp  main_window.h  pattern_grid.cpp  pattern_grid.h
tests/: cli_core_numeric_parse_test.cpp  cli_core_playback_test.cpp  cli_core_reset_state_test.cpp  cli_core_save_load_failure_test.cpp  cli_core_status_detail_test.cpp  cli_core_status_midi_map_test.cpp  cli_core_status_undo_redo_flags_test.cpp  cli_core_tempo_save_load_guard_test.cpp  cli_loop_range_status_test.cpp  cli_midi_basic_parse_test.cpp  cli_midi_clock_autoconnect_not_running_test.cpp  cli_midi_clock_basic_parse_test.cpp  cli_midi_clock_diagnose_live_probe_failure_test.cpp  cli_midi_clock_diagnose_test.cpp  cli_midi_clock_help_parse_test.cpp  cli_midi_clock_quick_test.cpp  cli_midi_clock_sources_test.cpp  cli_midi_instrument_test.cpp  cli_midi_map_test.cpp  cli_midi_quick_test.cpp  cli_midi_root_parse_test.cpp  cli_midi_subcommand_basic_parse_test.cpp  cli_midi_transport_basic_parse_test.cpp  cli_midi_transport_invalid_mode_test.cpp  cli_midi_transport_test.cpp  cli_note_clear_dry_test.cpp  cli_note_modifiers_dry_test.cpp  cli_note_set_dry_test.cpp  cli_note_set_optional_parse_test.cpp  cli_note_strict_numeric_parse_test.cpp  cli_note_trailing_token_guard_test.cpp  cli_note_usage_guard_test.cpp  cli_note_write_commit_test.cpp  cli_pattern_bulk_undo_redo_test.cpp  cli_pattern_copy_paste_step_stride_test.cpp  cli_pattern_copy_paste_test.cpp  cli_pattern_effect_fill_test.cpp  cli_pattern_effect_numeric_parse_test.cpp  cli_pattern_gate_numeric_parse_test.cpp  cli_pattern_gate_scale_test.cpp  (+67 more)
tools/: virtual_midi_clock.py
